package ISP.exercice;

public interface ISensDoor {
    void lock();

    void unlock();

    void open();

    void close();

    void proximityCallback();

}
