package ISP.exercice;

public interface ITimeDoor {
    void lock();

    void unlock();

    void open();

    void close();

    void timeOutCallback();
}
