package ISP.exercice;


import java.util.TimerTask;

public class Timer {
    public void register(long timeOut, final ITimeDoor door)
    {
        java.util.Timer timerUtility = new java.util.Timer();
        timerUtility.schedule(new TimerTask()
        {
            @Override
            public void run()
            {
                door.timeOutCallback();
            }
        }, timeOut);
    }
}
